--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -48,7 +48,7 @@ revm-primitives = { workspace = true, optional = true }
 op-alloy-consensus.workspace = true
 alloy-rpc-types-eth.workspace = true
 rollup-boost.workspace = true
-# flashblocks-p2p.workspace = true
+flashblocks-p2p.workspace = true
 
 tokio = { workspace = true }
 eyre.workspace = true
