--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -22,7 +22,7 @@ reth.workspace = true
 reth-chain-state = { workspace = true, optional = true }
 reth-db = { workspace = true, optional = true }
 reth-node-builder.workspace = true
-reth-engine-local = { workspace = true, optional = true }
+reth-engine-local.workspace = true
 reth-optimism-chainspec.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-primitives.workspace = true
@@ -84,21 +84,20 @@ chrono.workspace = true
 [features]
 default = []
 test = [
-  "world-chain-builder-test-utils",
-  "world-chain-builder-pbh",
-  "dep:reth-e2e-test-utils",
-  "dep:reth-chain-state",
-  "dep:reth-tracing",
-  "dep:reth-engine-local",
-  "dep:reth-primitives",
-  "dep:reth-primitives-traits",
-  "dep:reth-prune-types",
-  "dep:reth-trie",
-  "dep:reth-db",
-  "dep:alloy-rpc-types",
-  "dep:alloy-sol-types",
-  "dep:alloy-eips",
-  "dep:revm-primitives",
-  "dep:futures",
-  "dep:chrono",
+    "world-chain-builder-test-utils",
+    "world-chain-builder-pbh",
+    "dep:reth-e2e-test-utils",
+    "dep:reth-chain-state",
+    "dep:reth-tracing",
+    "dep:reth-primitives",
+    "dep:reth-primitives-traits",
+    "dep:reth-prune-types",
+    "dep:reth-trie",
+    "dep:reth-db",
+    "dep:alloy-rpc-types",
+    "dep:alloy-sol-types",
+    "dep:alloy-eips",
+    "dep:revm-primitives",
+    "dep:futures",
+    "dep:chrono",
 ]
