--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ members = [
     "crates/world/pbh",
     "crates/world/pool",
     "crates/world/test-utils",
-    "crates/world/chainspec", 
+    "crates/world/chainspec",
     "crates/tests/sepolia",
     "crates/tests/devnet",
 ]
@@ -44,53 +44,58 @@ world-chain-builder-test-utils = { path = "crates/world/test-utils" }
 flashblocks = { path = "crates/world/flashblocks" }
 
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0", features = [
-  "test-utils",
+reth = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-cli-util = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-cli = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-evm = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c", features = [
+    "op",
 ] }
-reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-prune-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0", default-features = false }
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-db = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-db-api = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-provider = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c", features = [
+    "test-utils",
+] }
+reth-basic-payload-builder = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-transaction-pool = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-rpc-server-types = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-prune-types = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-trie = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-chain-state = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-eth-wire-types = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-stages-types = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-trie-db = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-primitives-traits = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-node-builder = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-engine-local = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c", features = [
+    "op",
+] }
+reth-node-api = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-payload-builder = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-payload-util = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-payload-validator = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-revm = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c", default-features = false }
+reth-tasks = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-chainspec = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
 
 # reth-optimism
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth_payload_util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
-reth-optimism-storage = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-primitives = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-evm = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-node = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-cli = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-rpc = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-consensus = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-chainspec = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth_payload_util = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-payload-builder = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-forks = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-primitives = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-e2e-test-utils = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-consensus = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-node-core = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-tracing = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-rpc-layer = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-node-ethereum = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
+reth-optimism-storage = { git = "https://github.com/0xOsiris/reth", rev = "1bb4f2c" }
 
 # alloy op
 op-alloy-consensus = "0.18.9"
@@ -100,41 +105,46 @@ op-alloy-network = "0.18.9"
 alloy-op-hardforks = "0.2.2"
 
 # alloy
-alloy = { version = "1.0.16" }
+alloy = { version = "1.0.18" }
 alloy-chains = { version = "0.2.0", default-features = false }
-alloy-provider = { version = "1.0.16", default-features = false }
-alloy-rpc-client = { version = "1.0.16", default-features = false }
-alloy-transport-http = { version = "1.0.16", default-features = false }
-alloy-transport = { version = "1.0.16", default-features = false }
-alloy-consensus = { version = "1.0.16", default-features = false }
-alloy-network = { version = "1.0.16", default-features = false }
+alloy-provider = { version = "1.0.18", default-features = false }
+alloy-rpc-client = { version = "1.0.18", default-features = false }
+alloy-transport-http = { version = "1.0.18", default-features = false }
+alloy-transport = { version = "1.0.18", default-features = false }
+alloy-consensus = { version = "1.0.18", default-features = false }
+alloy-network = { version = "1.0.18", default-features = false }
 alloy-primitives = { version = "1.2.0", default-features = false }
-alloy-rpc-types-eth = { version = "1.0.16", default-features = false }
-alloy-rpc-types = { version = "1.0.16", features = [
-  "eth",
+alloy-rpc-types-eth = { version = "1.0.18", default-features = false }
+alloy-rpc-types = { version = "1.0.18", features = [
+    "eth",
 ], default-features = false }
-alloy-rpc-types-engine = { version = "1.0.16" }
+alloy-rpc-types-engine = { version = "1.0.18" }
 alloy-rlp = { version = "0.3.10", default-features = false }
-alloy-eips = { version = "1.0.16", default-features = false }
-alloy-genesis = { version = "1.0.16", default-features = false }
-alloy-rpc-types-debug = "1.0.16"
-alloy-signer = { version = "1.0.16", default-features = false }
-alloy-signer-local = { version = "1.0.16", default-features = false }
+alloy-eips = { version = "1.0.18", default-features = false }
+alloy-genesis = { version = "1.0.18", default-features = false }
+alloy-rpc-types-debug = "1.0.18"
+alloy-signer = { version = "1.0.18", default-features = false }
+alloy-signer-local = { version = "1.0.18", default-features = false }
 alloy-sol-types = "1.1.0"
-alloy-serde = { version = "1.0.11", default-features = false}
+alloy-serde = { version = "1.0.11", default-features = false }
 
 
 # revm
-revm = { version = "26.0.1", default-features = false }
+revm = { version = "27.0.2", default-features = false }
+revm-state = { version = "*", default-features = false }
 revm-primitives = { version = "20.0.0", default-features = false }
-op-revm = { version = "7.0.1", default-features = false }
+op-revm = { version = "8.0.2", default-features = false }
+alloy-op-evm = { version = "0.14", default-features = false }
 
 # rpc
 jsonrpsee = { version = "0.25.1", features = ["server", "client", "macros"] }
 jsonrpsee-types = "0.25.1"
 
 # 3rd party
+rollup-boost = { git = "https://github.com/flashbots/rollup-boost", branch = "forerunner/p2p-flashblocks" }
 tokio = { version = "1.44.2", features = ["full"] }
+tokio-util = "0.7.15"
+tokio-tungstenite = "0.26.2"
 futures = "0.3"
 chrono = "0.4"
 thiserror = "1"
@@ -166,7 +176,7 @@ rayon = "1.10.0"
 auto_impl = "1"
 
 # WIP
-# [patch."https://github.com/paradigmxyz/reth"]
+# [patch."https://github.com/0xOsiris/reth"]
 # reth = { path = "../../paradigmxyz/reth/bin/reth" }
 # reth-cli-util
 # reth-evm
