--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -12,32 +12,35 @@ reth.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-chain-state.workspace = true
 reth-chainspec.workspace = true
-reth-evm.workspace = true
 reth-provider.workspace = true
 reth-primitives.workspace = true
 reth-transaction-pool.workspace = true
 reth-payload-util.workspace = true
 revm.workspace = true
+reth-evm.workspace = true
 
 # op-reth
 reth-optimism-forks.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-payload-builder.workspace = true
+reth-optimism-primitives.workspace = true
+reth-optimism-chainspec.workspace = true
 
 # alloy
 alloy-consensus.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
-alloy-serde.workspace = true
+op-alloy-consensus.workspace = true
+alloy-op-evm.workspace = true
+
+rollup-boost.workspace = true
 
 # tokio
 tokio.workspace = true
-tokio-tungstenite = "0.26.2"
+tokio-tungstenite.workspace = true
 
 # misc
 tracing.workspace = true
 serde_json.workspace = true
-serde.workspace = true
-eyre.workspace = true
 futures-util = "0.3"
 clap.workspace = true
