--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -22,6 +22,7 @@ reth.workspace = true
 reth-chain-state = { workspace = true, optional = true }
 reth-db = { workspace = true, optional = true }
 reth-node-builder.workspace = true
+reth-engine-local.workspace = true
 reth-optimism-chainspec.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-primitives.workspace = true
@@ -30,6 +31,7 @@ reth-optimism-payload-builder.workspace = true
 reth-optimism-rpc.workspace = true
 reth-primitives = { workspace = true, optional = true }
 reth-primitives-traits = { workspace = true, optional = true }
+reth-tracing = { workspace = true, optional = true }
 reth-optimism-forks.workspace = true
 reth-provider.workspace = true
 reth-prune-types = { workspace = true, optional = true }
@@ -71,6 +73,9 @@ alloy-network.workspace = true
 alloy-signer-local.workspace = true
 alloy-eips.workspace = true
 
+rollup-boost.workspace = true
+tokio-tungstenite.workspace = true
+tokio-util.workspace = true
 criterion.workspace = true
 semaphore-rs = { workspace = true, features = ["depth_30"] }
 serde_json.workspace = true
@@ -79,19 +84,20 @@ chrono.workspace = true
 [features]
 default = []
 test = [
-  "world-chain-builder-test-utils",
-  "world-chain-builder-pbh",
-  "dep:reth-e2e-test-utils",
-  "dep:reth-chain-state",
-  "dep:reth-primitives",
-  "dep:reth-primitives-traits",
-  "dep:reth-prune-types",
-  "dep:reth-trie",
-  "dep:reth-db",
-  "dep:alloy-rpc-types",
-  "dep:alloy-sol-types",
-  "dep:alloy-eips",
-  "dep:revm-primitives",
-  "dep:futures",
-  "dep:chrono",
+    "world-chain-builder-test-utils",
+    "world-chain-builder-pbh",
+    "dep:reth-e2e-test-utils",
+    "dep:reth-chain-state",
+    "dep:reth-tracing",
+    "dep:reth-primitives",
+    "dep:reth-primitives-traits",
+    "dep:reth-prune-types",
+    "dep:reth-trie",
+    "dep:reth-db",
+    "dep:alloy-rpc-types",
+    "dep:alloy-sol-types",
+    "dep:alloy-eips",
+    "dep:revm-primitives",
+    "dep:futures",
+    "dep:chrono",
 ]
