--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -15,9 +15,9 @@ world-chain-builder-payload.workspace = true
 world-chain-builder-pool.workspace = true
 world-chain-builder-test-utils = { workspace = true, optional = true }
 world-chain-builder-pbh = { workspace = true, optional = true }
-
 flashblocks.workspace = true
 rollup-boost.workspace = true
+
 reth.workspace = true
 reth-chain-state = { workspace = true, optional = true }
 reth-db = { workspace = true, optional = true }
@@ -37,6 +37,7 @@ reth-provider.workspace = true
 reth-prune-types = { workspace = true, optional = true }
 reth-trie = { workspace = true, optional = true }
 reth-trie-db.workspace = true
+reth-basic-payload-builder.workspace = true
 reth-transaction-pool.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
 reth-node-api.workspace = true
