--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,7 @@ alloy-op-hardforks = "0.2.2"
 
 # alloy
 alloy = { version = "1.0.18" }
+alloy-json-rpc = { version = "1.0.18", default-features = false }
 alloy-chains = { version = "0.2.0", default-features = false }
 alloy-provider = { version = "1.0.18", default-features = false }
 alloy-rpc-client = { version = "1.0.18", default-features = false }
@@ -138,11 +139,12 @@ alloy-op-evm = { version = "0.14", default-features = false }
 
 # rpc
 jsonrpsee = { version = "0.25.1", features = ["server", "client", "macros"] }
+jsonrpsee-core = { version = "0.25.1" }
 jsonrpsee-types = "0.25.1"
 
 # 3rd party
-rollup-boost = { git = "https://github.com/flashbots/rollup-boost", rev = "5173953" }
-flashblocks-p2p = { git = "https://github.com/flashbots/rollup-boost", rev = "5173953" }
+rollup-boost = { git = "https://github.com/flashbots/rollup-boost", rev = "24acb80" }
+flashblocks-p2p = { git = "https://github.com/flashbots/rollup-boost", rev = "24acb80" }
 
 tokio = { version = "1.44.2", features = ["full"] }
 tokio-util = "0.7.15"
@@ -176,6 +178,7 @@ reqwest = { version = "0.12", default-features = false }
 bon = "3.3.0"
 rayon = "1.10.0"
 auto_impl = "1"
+async-trait = "0.1.88"
 
 # WIP
 # [patch."https://github.com/0xOsiris/reth"]
