--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -22,6 +22,7 @@ reth-evm.workspace = true
 # op-reth
 reth-optimism-forks.workspace = true
 reth-optimism-node.workspace = true
+reth-optimism-rpc.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-primitives.workspace = true
 reth-optimism-chainspec.workspace = true
@@ -31,6 +32,8 @@ alloy-consensus.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
 op-alloy-consensus.workspace = true
+op-alloy-rpc-types-engine.workspace = true
+alloy-rpc-types-engine.workspace = true
 alloy-op-evm.workspace = true
 
 rollup-boost.workspace = true
@@ -42,3 +45,5 @@ tokio.workspace = true
 # misc
 tracing.workspace = true
 clap.workspace = true
+jsonrpsee-core.workspace = true
+futures.workspace = true
