--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -80,6 +80,6 @@ jobs:
             key: cargo-test-${{ hashFiles('**/Cargo.lock') }}
             restore-keys: cargo-test-   
         - name: clippy
-          run: cargo +nightly clippy --all-targets --all-features -- -D warnings
+          run: cargo +nightly clippy --workspace --all-targets --all-features -- -D warnings
         
 
